# SWMProject

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
CODE/api/: app.py
CODE/api/routers/: query.py
CODE/baseline/: __init__.py  base.py  prompt_baseline.py
CODE/benchmark/: runner.py
CODE/benchmark/datasets/: __init__.py  base.py  spider.py
CODE/evaluation/: explainability.py  failure_modes.py
CODE/lrg/: __init__.py  builder.py  nodes.py  pipeline.py
CODE/schema/: __init__.py  graph.py
EVALUATIONS/: README.md  cosql_baseline_n10.json  cosql_lrg_n10.json  spider_baseline_n50.json  spider_lrg_n10.json
configs/: default.yaml  gemini.yaml  ollama.yaml
data/: README.md
docs/: architecture.md  contributing.md  evaluation.md  lrg_design.md
scripts/: debug_llm.py  download_data.py  run_benchmark.py  run_query.py
src/: config.py
src/api/routers/: benchmark.py  schema.py
src/baseline/: registry.py
src/benchmark/: __init__.py  reporter.py
src/benchmark/datasets/: cosql.py  custom.py
src/evaluation/: __init__.py  failure_modes.py  metrics.py
src/llm/: __init__.py  base.py  factory.py  gemini.py  ollama.py
src/lrg/: builder.py  graph.py  nodes.py  pipeline.py  repair.py  synthesizer.py  visualizer.py
src/schema/: parser.py
tests/: test_evaluation.py  test_lrg.py  test_schema.py
ui/: app.py
ui/pages/: 1_Query.py  2_Benchmark.py  3_Analysis.py
